Remove every reference to Torque and SGE schedulers
* TorqueCommands in tests/common/schedulers_common has been preserved
  because in test_slurm we're testing torque wrappers for slurm.
* Remove ASG related methods and utilities
* Remove unused SQS and ASG policies
* Remove nodewatcher, jobwatcher, sqswatcher references
* Remove dynamodb:ListTables policy

Cherry pick of:
https://github.com/aws/aws-parallelcluster/pull/2613/commits/8a67a7fa16bb54c99736e0ae6bcfba809e4753b5

with some conflicts:
CHANGELOG.md	Modified	Modified
cli/src/pcluster/templates/cluster_stack.py	Deleted	Modified
tests/integration-tests/configs/develop.yaml	Modified	Modified
tests/integration-tests/tests/common/scaling_common.py	Modified	Modified
tests/integration-tests/tests/cfn-init/test_cfn_init.py	Modified	Modified
cli/tests/pcluster/templates/test_cw_dashboard_builder.py	Deleted	Modified
tests/integration-tests/tests/dcv/test_dcv.py	Modified	Modified
tests/integration-tests/tests/runtime_bake/test_runtime_bake.py	Modified	Modified
tests/integration-tests/tests/spot/test_spot.py	Modified	Modified

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -8,19 +8,19 @@ test-suites:
   runtime_bake:
     test_runtime_bake.py::test_runtime_bake: # arm instance tests are temporarily skipped
       dimensions:
-        {%- for os, scheduler in [("ubuntu1804", "torque"), ("centos7", "sge"), ("alinux2", "slurm"), ("ubuntu2004", "torque")] %}
+        {%- for os, scheduler in [("alinux2", "slurm")] %}
         - regions: ["eu-west-2"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
           oss: ["{{ os }}"]
           schedulers: ["{{ scheduler }}"]
         {%- endfor %}
-        {%- for os, scheduler in [("ubuntu1804", "sge")] %}
+        {%- for os, scheduler in [("ubuntu1804", "slurm")] %}
         - regions: ["us-gov-west-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
           oss: ["{{ os }}"]
           schedulers: ["{{ scheduler }}"]
         {%- endfor %}
-#        {%- for os, scheduler in [("ubuntu1804", "sge"), ("alinux2", "slurm")] %}
+#        {%- for os, scheduler in [("ubuntu1804", "slurm"), ("alinux2", "slurm")] %}
 #        - regions: ["us-east-1"]
 #          instances: {{ common.INSTANCES_DEFAULT_ARM }}
 #          oss: ["{{ os }}"]
