Run workloads for multiple users simultaneously during AD integration test
Signed-off-by: Tim Lane <tilne@amazon.com>

--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.yaml
@@ -53,7 +53,10 @@ Monitoring:
       RetentionInDays: 14
 SharedStorage:
   - MountDir: /shared
-    Name: name1
+    Name: fsx
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 2400
+  - MountDir: /ebs
+    Name: ebs
+    StorageType: Ebs
