--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -183,6 +183,15 @@ Tags:
     Value: two22
 CustomS3Bucket: String
 AdditionalResources: https://template.url
+DirectoryService:
+  DomainName: string  # required
+  DomainAddr: string  # required
+  PasswordSecretArn: string  # required
+  DomainReadOnlyUser: string  # required
+  LdapTlsCaCert: string  # optional, default is dictated by LDAP client
+  LdapTlsReqCert: never
+  LdapAccessFilter: string  # optional
+  GenerateSshKeysForUsers: false
 DevSettings:
   ClusterTemplate: https://tests/aws-parallelcluster-template-3.0.tgz
   Cookbook:
