--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.yaml
@@ -8,19 +8,6 @@ HeadNode:
     KeyName: {{ key_name }}
   Imds:
     Secured: {{ imds_secured }}
-  Iam:
-    AdditionalIamPolicies:
-      - Policy: arn:aws:iam::aws:policy/AdministratorAccess
-  {% if post_install_script_uri %}
-  CustomActions:
-    OnNodeConfigured:
-      Script: {{ post_install_script_uri }}
-      Args:
-        - {{ ldap_uri }}
-        - {{ ldap_search_base }}
-        - {{ ldap_default_bind_dn }}
-        - {{ ldap_client_password }}
-  {% endif %}
 Scheduling:
   Scheduler: {{ scheduler }}
   SlurmQueues:
@@ -33,19 +20,6 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ directory_subnet }}
-      Iam:
-        AdditionalIamPolicies:
-          - Policy: arn:aws:iam::aws:policy/AdministratorAccess
-      {% if post_install_script_uri %}
-      CustomActions:
-        OnNodeConfigured:
-          Script: {{ post_install_script_uri }}
-          Args:
-            - {{ ldap_uri }}
-            - {{ ldap_search_base }}
-            - {{ ldap_default_bind_dn }}
-            - {{ ldap_client_password }}
-      {% endif %}
 Monitoring:
   Logs:
     CloudWatch:
@@ -60,3 +34,9 @@ SharedStorage:
   - MountDir: /ebs
     Name: ebs
     StorageType: Ebs
+DirectoryService:
+  DomainName: {{ ldap_search_base }}
+  DomainAddr: {{ ldap_uri }}  # TODO: use ldaps
+  PasswordSecretArn: {{ password_secret_arn }}
+  DomainReadOnlyUser: {{ ldap_default_bind_dn }} # TODO: parametrize username
+  LdapTlsReqCert: never # TODO: use 'require'
