--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -192,6 +192,9 @@ DirectoryService:
   LdapTlsReqCert: never
   LdapAccessFilter: string  # optional
   GenerateSshKeysForUsers: false
+  AdditionalSssdConfigs:
+    parameter_1: value_1
+    parameter_2: value_2
 DevSettings:
   ClusterTemplate: https://tests/aws-parallelcluster-template-3.0.tgz
   Cookbook:
