--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.yaml
@@ -36,7 +36,11 @@ SharedStorage:
     StorageType: Ebs
 DirectoryService:
   DomainName: {{ ldap_search_base }}
-  DomainAddr: {{ ldap_uri }}  # TODO: use ldaps
+  DomainAddr: {{ ldap_uri }}
   PasswordSecretArn: {{ password_secret_arn }}
-  DomainReadOnlyUser: {{ ldap_default_bind_dn }} # TODO: parametrize username
-  LdapTlsReqCert: never # TODO: use 'require'
+  DomainReadOnlyUser: {{ ldap_default_bind_dn }}
+  LdapTlsReqCert: never
+  AdditionalSssdConfigs:
+    debug_level: 0x1ff
+    ldap_auth_disable_tls_never_use_in_production: True
+    enumerate: True
