--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
@@ -43,7 +43,7 @@ DirectoryService:
   PasswordSecretArn: {{ password_secret_arn }}
   DomainReadOnlyUser: {{ ldap_default_bind_dn }}
   LdapTlsReqCert: never
-  GenerateSshKeysForUsers: false
+  GenerateSshKeysForUsers: true
   AdditionalSssdConfigs:
     debug_level: "0x1ff"
     enumerate: True
