Integ-tests: add run_benchmark fixture to draft a general scaling test infrastructure
## A run_benchmarks fixture

A fixture called run_benchmarks will be created in conftest.py. Because the fixture can collect test information from other fixtures, the caller of the fixture only needs to provide two arguments: remote_command_executor and scheduler_commands.

The fixture will run tests specified by benchmarks, conditioned on request.config.getoption("benchmarks"). At the end, the fixture will push the result to CloudWatch metrics.

## A benchmarks fixture

The benchmarks fixture will come from the test config yaml file, similar to the region, scheduler, os, instance fixtures. Therefore, a benchmarks section will be added to the test config YAML file.

## A flag request.config.getoption("benchmarks")

Because we are plugging benchmark tests into existing tests, it is necessary to have a flag to control whether the benchmark tests are executed to avoid always running the benchmarks together with functionality test runs. Benchmarks should be refrained from frequent run to reduce resource consumption.
The --benchmarks flag is provided through test_runner command, e.g. python test_runner.py --key-name "mykey" —key-path /Users/hanwen/.ssh/mykey.pem —parallelism 8 —tests-config configs/develop.yaml --benchmarks.
When scheduling tests on Jenkins, Jenkins Parametrized Scheduler (https://plugins.jenkins.io/parameterized-scheduler/) can be used to exclude benchmarks flag from frequent run and include it in sparce runs.

## Add placement groups to queues when benchmarks are enabled

Placement groups reduce performance noises across different test runs

## Relax timeout of some util functions

When running commands with more nodes, the execution time could be longer

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/configs/ad_integration.yaml
+++ b/tests/integration-tests/configs/ad_integration.yaml
@@ -8,3 +8,10 @@ test-suites:
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
           oss: ["alinux2", "ubuntu2004"]
           schedulers: ["slurm"]
+          benchmarks:
+            - mpi_variants: ["openmpi"]
+              num_of_instances: [100]
+              osu_benchmarks:
+                # Available collective benchmarks "osu_allgather", "osu_allreduce", "osu_alltoall", "osu_barrier", "osu_bcast", "osu_gather", "osu_reduce", "osu_reduce_scatter", "osu_scatter"
+                collective: ["osu_allreduce", "osu_alltoall"]
+                pt2pt: []
