--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -1,3 +1,10 @@
+ad_integration:
+  test_ad_integration.py::test_ad_integration:
+    dimensions:
+      - regions: ["us-east-1"]
+        instances: ["c5n.18xlarge"]
+        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        schedulers: ["slurm"]
 arm_pl:
   test_arm_pl.py::test_arm_pl:
     dimensions:
