Add other semgrep rules
Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cli/tox.ini
+++ b/cli/tox.ini
@@ -185,6 +185,10 @@ commands =
     semgrep \
         --config p/r2c-security-audit \
         --config p/secrets \
+        --config p/owasp-top-ten \
+        --config p/trailofbits \
+        --config p/r2c-ci \
+        --config p/python \
         --exclude 'tests/**' \
         --exclude 'Dockerfile' \
         --error
