Add CreateServiceLinkedRole for build image policy
This policy is required to create at least once the role AWSServiceRoleForImageBuilder, which is needed to allow EC2 Image Builder to access AWS resources on user behalf.

Ref https://docs.aws.amazon.com/imagebuilder/latest/userguide/image-builder-service-linked-role.html

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -769,6 +769,15 @@ Resources:
               - s3:GetObject
             Resource:
               - !Sub 'arn:${AWS::Partition}:s3:::parallelcluster-*/*'
+          - Action:
+              - iam:CreateServiceLinkedRole
+            Resource:
+              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/imagebuilder.amazonaws.com/AWSServiceRoleForImageBuilder
+            Effect: Allow
+            Condition:
+              StringLike:
+                iam:AWSServiceName:
+                  - imagebuilder.amazonaws.com
 
   ParallelClusterDeleteImageManagedPolicy:
     Type: AWS::IAM::ManagedPolicy
