Add integration test to test custom log
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
@@ -39,6 +39,19 @@ Scheduling:
         HeadComputeFleetStop:
           ExecuteCommand:
             Command: env && echo "HeadComputeFleetStop executed"
+      Monitoring:
+        Logs:
+          Files:
+            - FilePath: /var/log/cfn-init-cmd.log
+              TimestampFormat: "%Y-%m-%d %H:%M:%S,%f"
+              NodeType: HEAD
+              LogStreamName: test_cfn_init_cmd.log
+            - FilePath: /opt/aws/amazon-cloudwatch-agent/logs/configuration-validation.log
+              NodeType: COMPUTE
+              LogStreamName: test_configuration_validation.log
+            - FilePath: /opt/aws/amazon-cloudwatch-agent/logs/amazon-cloudwatch-agent.log
+              TimestampFormat: "%Y/%m/%d %H:%M:%S"
+              LogStreamName: test_amazon_cloudwatch_agent.log
       PluginResources:
         ClusterSharedArtifacts:
           - Source: https://${Region}-aws-parallelcluster.s3.${Region}.${URLSuffix}/parallelcluster/3.0.0/cookbooks/aws-parallelcluster-cookbook-3.0.0.tgz
