Switch to ec2-user for awsbatch when running user's job
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/src/pcluster/resources/batch/docker/alinux2/Dockerfile
+++ b/cli/src/pcluster/resources/batch/docker/alinux2/Dockerfile
@@ -1,6 +1,6 @@
 FROM public.ecr.aws/amazonlinux/amazonlinux:2
 
-ENV USER root
+USER root
 
 ARG AWS_REGION
 
@@ -58,3 +58,5 @@ ENV PATH "/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin:/usr/lib6
 EXPOSE 22
 
 ENTRYPOINT ["/parallelcluster/bin/entrypoint.sh"]
+
+USER ec2-user
