Enable compute fleet status update for the byos case
* added new dynamoDB table for compute fleet status
* enabled start/stop command for compute fleet status change

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
+++ b/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
@@ -95,12 +95,9 @@ Scheduling:
         HeadClusterUpdate:
           ExecuteCommand:
             Command: artifacts/handlers/head_cluster_update.sh
-        HeadComputeFleetStart:
+        HeadComputeFleetUpdate:
           ExecuteCommand:
-            Command: artifacts/handlers/head_computefleet_start.sh
-        HeadComputeFleetStop:
-          ExecuteCommand:
-            Command: artifacts/handlers/head_computefleet_stop.sh
+            Command: artifacts/handlers/head_computefleet_update.sh
       Monitoring:
         Logs:
           Files:
