--- a/scheduler_plugins/plugin_template/plugin_definition.yaml
+++ b/scheduler_plugins/plugin_template/plugin_definition.yaml
@@ -80,6 +80,9 @@ Events:
   HeadClusterUpdate:
     ExecuteCommand:
       Command: artifacts/handlers/head_cluster_update.sh
+  HeadComputeFleetUpdate:
+    ExecuteCommand:
+      Command: artifacts/handlers/head_compute_fleet_update.sh
 # NOT AVAILABLE YET
 # Allows the registration of custom log files to be uploaded to the CloudWatch log group managed by ParallelCluster
 # Monitoring:
