Fix configuration parameters used for AWS Batch tests: Vcpus vs vCpus
We're following naming convention from CFN:
https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.yaml
+++ b/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.yaml
@@ -18,7 +18,7 @@ Scheduling:
           {% if scheduler == "awsbatch" %}
           InstanceTypes:
             - {{ instance }}
-          MinVcpus: 4
+          MinvCpus: 4
           {% else %}
           InstanceType: {{ instance }}
           MinCount: 1
