--- a/tests/integration-tests/tests/storage/test_fsx_lustre/test_existing_fsx/pcluster.config.yaml
+++ b/tests/integration-tests/tests/storage/test_fsx_lustre/test_existing_fsx/pcluster.config.yaml
@@ -24,7 +24,7 @@ Scheduling:
           InstanceTypes:
             - {{ instance }}
           MinvCpus: 1
-          DesiredVcpus: 1
+          DesiredvCpus: 1
           {% else %}
           InstanceType: {{ instance }}
           MinCount: 1
