--- a/tests/integration-tests/tests/dcv/test_dcv/test_dcv_with_remote_access/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dcv/test_dcv/test_dcv_with_remote_access/pcluster.config.yaml
@@ -21,10 +21,10 @@ Scheduling:
           {% if scheduler == "awsbatch" %}
           InstanceTypes:
             - {{ instance }}
-          # Cpu count is valid for g3.8xlarge
-          MinvCpus: 32
-          DesiredvCpus: 32
-          MaxvCpus: 32
+          # Cpu count is valid for g4dn.xlarge
+          MinvCpus: 4
+          DesiredvCpus: 4
+          MaxvCpus: 4
           {% else %}
           InstanceType: {{ instance }}
           MinCount: 1
