Change build AMI validation for Nvidia/Cuda for ARM case
Add integration tests for GPU ARM case

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -155,6 +155,11 @@ dcv:
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
         oss: ["alinux2", "ubuntu1804"]
         schedulers: ["slurm"]
+      # DCV on ARM + GPU
+      - regions: ["us-east-1"]
+        instances: ["g5g.2xlarge"]
+        oss: ["alinux2", "ubuntu1804"]
+        schedulers: ["slurm"]
       # DCV on Batch
       - regions: ["us-east-1"]
         instances: ["g4dn.2xlarge"]
