--- a/tests/integration-tests/tests/dcv/test_dcv/test_dcv_configuration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dcv/test_dcv/test_dcv_configuration/pcluster.config.yaml
@@ -21,10 +21,10 @@ Scheduling:
           {% if scheduler == "awsbatch" %}
           InstanceTypes:
             - {{ instance }}
-          # Cpu count is valid for g4dn.xlarge
-          MinvCpus: 4
-          DesiredvCpus: 4
-          MaxvCpus: 4
+          # Cpu count is valid for g4dn.2xlarge
+          MinvCpus: 8
+          DesiredvCpus: 8
+          MaxvCpus: 8
           {% else %}
           InstanceType: {{ instance }}
           MinCount: 1
