--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
@@ -66,8 +66,16 @@ Scheduling:
       SystemUsers:
         - Name: {{ user1 }}
           EnableImds: false
+          SudoerConfiguration:
+            - Commands: ALL
+              RunAs: root
+            - Commands: /usr/bin/ls, /usr/bin/touch
+              RunAs: {{ run_as_user }}
         - Name: {{ user2 }}
           EnableImds: true
+          SudoerConfiguration:
+            - Commands: /usr/bin/ls
+              RunAs: root
       Tags:
         - Key: SchedulerPluginTag
           Value: SchedulerPluginTagValue
