--- a/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
+++ b/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
@@ -46,7 +46,7 @@ Resources:
       KeySchema:
         - AttributeName: Id
           KeyType: HASH
-      TableName: "parallelcluster-{{ cluster_name | lower }}"
+      TableName: "parallelcluster-slurm-plugin-{{ cluster_name | lower }}"
     Type: AWS::DynamoDB::Table
     UpdateReplacePolicy: Retain
 
