--- a/scheduler_plugins/plugin_template/plugin_definition.yaml
+++ b/scheduler_plugins/plugin_template/plugin_definition.yaml
@@ -12,7 +12,6 @@ Metadata:
   License: link
   Version: 1.0.0
 # Define the plugin requirements that are validated by ParallelCluster against a cluster configuration.
-# NOT SUPPORTED YET
 Requirements:
   RequiresSudoPrivileges: true
   # # Select the list of distributions supported by the plugin. Defaults to all ParallelCluster supported distros.
@@ -29,8 +28,6 @@ Requirements:
   # ComputeResourceConstraints:
   #   # Max number of ComputeResources that can be configured for each queue. Defaults to 5.
   #   MaxCount: 5
-  #   # Max number of instance types that can be configured for each ComputeResource. Defaults to 1.
-  #   MaxInstanceTypesCount: 1
   # # When set to false all ClusterUpdate operations that modify the Scheduling section are forbidden.
   # SupportsClusterUpdate: true
   # This allows to constrain the ParallelCluster version supported by the plugin.
@@ -54,9 +51,15 @@ PluginResources:
 # The scheduler plugins will (possibly) require a number of “system” level users to run various processes.
 # This section can be used to create system users with a consistent user id on all cluster nodes.
 SystemUsers:
-  - Name: user1
-    # # Whether or not such user has access to IMDS, hence to IAM Instance Profile
-    # EnableImds: true
+  - Name: super-user
+    # Whether or not such user has access to IMDS, hence to IAM Instance Profile
+    EnableImds: true
+    SudoerConfiguration:
+      - Commands: ALL
+        RunAs: root
+  - Name: unprivileged-user
+  - Name: imds-only-user
+    EnableImds: true
 # Allows the definition of the actions to execute in order to handle the various events triggered by ParallelCluster.
 Events:
   HeadInit:
@@ -83,10 +86,11 @@ Events:
   HeadComputeFleetUpdate:
     ExecuteCommand:
       Command: artifacts/handlers/head_compute_fleet_update.sh
-# NOT AVAILABLE YET
 # Allows the registration of custom log files to be uploaded to the CloudWatch log group managed by ParallelCluster
-# Monitoring:
-#   Logs:
-#     Files:
-#     - FilePath: /var/log/parallelcluster-plugin/mylog.log
-#     - TimestampFormat: '%Y-%m-%dT%H:%M:%S%z'
+Monitoring:
+  Logs:
+    Files:
+    - FilePath: /var/log/parallelcluster-plugin/mypluginlog.log
+      TimestampFormat: '%Y-%m-%dT%H:%M:%S%z'
+      NodeType: ALL
+      LogStreamName: mypluginlog
