Limit privileges for logs:CreateLogStream and logs:PutLogEvents actions
API:
* `UpdateParallelClusterLambda` Lambda role limited to `log-group:/aws/lambda/ParallelClusterApi-UpdateParallelClusterLambda-*`
* `EcrImageDeletionLambda` Lambda role limited to `log-group:/aws/lambda/ParallelClusterApi-EcrImageDeletionLambda-*`

Cluster (both Slurm and Batch):
* `CleanupResources` Lambda role limited to `log-group:/aws/lambda/CleanupResources-*`.

Slurm:
* `CleanupRoute53` Lambda role limited to `log-group:/aws/lambda/CleanupRoute53-*` in slurm_builder.py
 and to `log-group:/aws/lambda/*` in scheduler_plugin code.

AWS Batch:
* `CodeBuildPolicy` limited to: `log-group:/aws/parallelcluster/codebuild/*`
* `ManageDockerImages` Lambda role limited to `log-group:/aws/lambda/pcluster-ManageDockerImages-*`
* `BuildNotification` Lambda role limited to `log-group:/aws/lambda/pcluster-BuildNotification-*`.

Tests:
* cluster-roles: `CustomLambdaResourceRoleSlurm` and `CustomLambdaResourceRoleBatch` limited  to `log-group:/aws/lambda/pcluster-*`
* traditional_instance_policy: limited to `log-group:/aws/parallelcluster/*`
* batch_instance_policy: limited to `log-group:/aws/parallelcluster/*`

Signed-off-by: Enrico Usai <usai@amazon.com>

Fix prefix used for Lambda resources role

Lambda functions are writing in `/aws/lambda/pcluster-*` and not in `/aws/parallelcluster/*`

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
+++ b/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
@@ -182,7 +182,7 @@ Resources:
                   - logs:CreateLogStream
                   - logs:PutLogEvents
                 Effect: Allow
-                Resource: !Sub "arn:${AWS::Partition}:logs:*:*:*"
+                Resource: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
                 Sid: CloudWatchLogsPolicy
             Version: '2012-10-17'
           PolicyName: LambdaPolicy
