Make test_ebs_single configuration compatible with AWS Batch
IAM section is not allowed in Batch queues.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/storage/test_ebs/test_ebs_single/pcluster.config.yaml
+++ b/tests/integration-tests/tests/storage/test_ebs/test_ebs_single/pcluster.config.yaml
@@ -28,8 +28,10 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+      {% if scheduler != "awsbatch" %}
       Iam:
         InstanceRole: {{ ec2_iam_role }}
+      {% endif %}
 SharedStorage:
   - MountDir: {{ mount_dir }}
     StorageType: Ebs
