--- a/scheduler_plugins/slurm/plugin_definition.yaml
+++ b/scheduler_plugins/slurm/plugin_definition.yaml
@@ -12,9 +12,11 @@ Requirements:
 ClusterInfrastructure:
   CloudFormation:
     Template: s3://<BUCKET>/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
+    Checksum: <TEMPLATE_CHECKSUM>
 PluginResources:
   ClusterSharedArtifacts:
     - Source: s3://<BUCKET>/scheduler_plugins/slurm/artifacts.tar.gz
+      Checksum: <ARTIFACTS_CHECKSUM>
 SystemUsers:
   - Name: slurm-user
     EnableImds: false
@@ -48,6 +50,9 @@ Events:
   HeadClusterUpdate:
     ExecuteCommand:
       Command: artifacts/handlers/head_cluster_update.sh
+  HeadComputeFleetUpdate:
+    ExecuteCommand:
+      Command: artifacts/handlers/head_compute_fleet_update.sh
 Monitoring:
   Logs:
     Files:
