--- a/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
+++ b/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
@@ -69,6 +69,10 @@ Resources:
     Type: AWS::CloudFormation::CustomResource
   CleanupRoute53Function:
     Properties:
+      FunctionName:
+        Fn::Sub:
+          - pcluster-CleanupRoute53-${Id}
+          - { Id: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
       Code:
         ZipFile: |
           import cfnresponse
