Remove compute logs dumping to /home/logs/compute shared dir
This behavior was enabled to facilitate debugging when CW feature was not available or disabled.
Disabling for the following reasons:
1. CW logging is now enabled by default
2. Compute logs are always being redirected to EC2 console logs and can be retrieved from there if CW feature is turned off or if CW agent hasn’t started yet
3. Logs are improperly dumped to the home directory (reason being that at the time the /home was the only always available shared dir). Especially now that we support multi user it becomes even more cumbersome to have this fake logs home directory.
4. Dumping logs to the shared /home and not having a cleanup mechanism in place is eating up space on the head node root volume

Signed-off-by: Francesco De Martino <fdm@amazon.com>

--- a/tests/integration-tests/tests/cfn-init/test_cfn_init/test_replace_compute_on_failure/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cfn-init/test_cfn_init/test_replace_compute_on_failure/pcluster.config.yaml
@@ -9,9 +9,6 @@ HeadNode:
     SubnetId: {{ public_subnet_id }}
   Ssh:
     KeyName: {{ key_name }}
-  CustomActions:
-    OnNodeConfigured:
-      Script: s3://{{ bucket_name }}/post_install.sh
   Imds:
     Secured: {{ imds_secured }}
 Scheduling:
@@ -22,7 +19,7 @@ Scheduling:
     - Name: compute
       CustomActions:
         OnNodeConfigured:
-          Script: s3://{{ bucket_name }}/post_install.sh
+          Script: s3://{{ bucket_name }}/failing_post_install.sh
       ComputeResources:
         - Name: compute-i1
           InstanceType: {{ instance }}
