Limit privileges for HeadNode role when using AWS Batch as scheduler
`AWSBatchFullAccess` it is not required by the head node.
I manually tested all the commands of ParallelCluster AWS Batch CLI:
* `awsbqueues` requires `batch:DescribeJobQueues`
* `awsbstat` requires `batch:ListJobs` and `batch:DescribeJobs`
* `awsbout` requires `logs:GetLogEvents` and `batch:DescribeJobs`
* `awsbsub` requires `batch:SubmitJob`
* `awsbkill` requires `batch:TerminateJob` and `batch:DescribeJobs`
* `awsbhosts` requires `batch:DescribeComputeEnvironments`, `ecs:ListContainerInstances`, `ecs:DescribeContainerInstances` and `ec2:DescribeInstances`

With this patch I'm also removing route53 permissions from AWS Batch HeadNode policy.

Note: `ec2:DescribeInstances` is already part of the base head node policies,
but I added it here too to have the complete set of required policies in a single place.

Remove useless `batch:RegisterJobDefinition` policy from `batch_instance_policy.json`.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/iam_policies/cluster-roles.cfn.yaml
+++ b/tests/iam_policies/cluster-roles.cfn.yaml
@@ -215,7 +215,6 @@ Resources:
       ManagedPolicyArns:
         - !Sub arn:${AWS::Partition}:iam::aws:policy/CloudWatchAgentServerPolicy
         - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
-        - !Sub arn:${AWS::Partition}:iam::aws:policy/AWSBatchFullAccess
       Policies:
         - PolicyName: HeadNodeRoleBatchPolicy
           PolicyDocument:
@@ -243,6 +242,27 @@ Resources:
                     iam:PassedToService:
                       - batch.amazonaws.com
               - Action:
+                  - batch:DescribeJobQueues
+                  - batch:DescribeJobs
+                  - batch:ListJobs
+                  - batch:DescribeComputeEnvironments
+                Effect: Allow
+                Resource: '*'
+              - Action:
+                  - batch:SubmitJob
+                  - batch:TerminateJob
+                  - logs:GetLogEvents
+                  - ecs:ListContainerInstances
+                  - ecs:DescribeContainerInstances
+                Effect: Allow
+                Resource:
+                  - !Sub arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/batch/job:log-stream:PclusterJobDefinition*
+                  - !Sub arn:${AWS::Partition}:ecs:${AWS::Region}:${AWS::AccountId}:container-instance/AWSBatch-PclusterComputeEnviron*
+                  - !Sub arn:${AWS::Partition}:ecs:${AWS::Region}:${AWS::AccountId}:cluster/AWSBatch-Pcluster*
+                  - !Sub arn:${AWS::Partition}:batch:${AWS::Region}:${AWS::AccountId}:job-queue/PclusterJobQueue*
+                  - !Sub arn:${AWS::Partition}:batch:${AWS::Region}:${AWS::AccountId}:job-definition/PclusterJobDefinition*:*
+                  - !Sub arn:${AWS::Partition}:batch:${AWS::Region}:${AWS::AccountId}:job/*
+              - Action:
                   - ec2:DescribeInstances
                   - ec2:DescribeInstanceStatus
                   - ec2:CreateTags
@@ -257,10 +277,6 @@ Resources:
                   - cloudformation:SignalResource
                 Effect: Allow
                 Resource: '*'
-              - Action:
-                  - route53:ChangeResourceRecordSets
-                Resource: '*'
-                Effect: Allow
             Version: '2012-10-17'
     Type: AWS::IAM::Role
 
